chore: using useCases functions in routes
